syntax = "proto3";

package xatu.noderecord;

option go_package = "github.com/ethpandaops/xatu/pkg/proto/noderecord";

import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";

message Execution {
  google.protobuf.StringValue enr = 1;
  google.protobuf.Timestamp timestamp = 2;
  google.protobuf.StringValue name = 3;
  google.protobuf.StringValue capabilities = 4;
  google.protobuf.StringValue protocol_version = 5 [json_name = "protocol_version"];
  google.protobuf.StringValue total_difficulty = 6 [json_name = "total_difficulty"];
  google.protobuf.StringValue head = 7;
  google.protobuf.StringValue genesis = 8;
  google.protobuf.StringValue fork_id_hash = 9 [json_name = "fork_id_hash"];
  google.protobuf.StringValue fork_id_next = 10 [json_name = "fork_id_next"];
  // Parsed ENR fields
  google.protobuf.StringValue node_id = 11 [json_name = "node_id"];
  google.protobuf.StringValue ip4 = 12;
  google.protobuf.StringValue ip6 = 13;
  google.protobuf.UInt32Value tcp4 = 14;
  google.protobuf.UInt32Value tcp6 = 15;
  google.protobuf.UInt32Value udp4 = 16;
  google.protobuf.UInt32Value udp6 = 17;
  google.protobuf.StringValue client_id = 18 [json_name = "client_id"];
}
